--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ I23<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Progate</title>
+    <title>KelompokI23</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -25,10 +25,10 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>BELAJAR CODING.</h1>
-        <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
-        <p>Progate adalah platform online untuk belajar pemrograman.</p>
-        <p>Kami menawarkan lingkungan pemrograman yang lengkap untuk mempermudah Anda memulai.</p>
+        <h1>TEAM I23.</h1>
+        <h1>PROGRAM DIGITAL TALENT 2020.</h1>
+        <p>Program Kelas Online Academy Digital talent 2020 kelas Programming HTML, CSS, dan javasript.</p>
+        <p>Program ini dilaksanakan oleh Kominfo bekerja sama dengan Progate sebagai penyelenggara kursus Online.</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Daftar dengan Email</a>
           <p>atau</p>
@@ -40,7 +40,7 @@
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-           <h2>Cari tau dari mana anda mau memulai!</h2>
+           <h2>Personil Kelompok I-23 Kelas Programming HTML, CSS, dan javasript.</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
