--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+          <img class="logo" src="https://web.kominfo.go.id/sites/default/files/users/12/DTS.png">
         </div>
         <div class="header-right">          
           <a href="#" class="login">Log in</a>
