--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <div class="header-left">
           <img class="logo" src="https://web.kominfo.go.id/sites/default/files/users/12/DTS.png">
         </div>
-        <div class="header-right">          
+        <span class="fa fa-bars menu-icon"></span>
+        <div class="header-right">
+          <a href="#">Home</a>
+          <a href="#">Project</a>
           <a href="#" class="login">Log in</a>
         </div>
       </div>
@@ -42,28 +45,35 @@
           <div class="lesson">
             <div class="lesson-icon">
               <img src="image1.png">
-              <p>HTML & CSS</p>
+              <p>Rizki AI</p>
             </div>
             <p class="txt-contents">Dua bahasa yang digunakan untuk membangun struktur dan design tambilan website anda.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="image2.png">
-              <p>jQuery</p>
+              <p>Subhan J</p>
             </div>
             <p class="txt-contents">JavaScript Library yang cepat, kaya akan fitur dan mudah digunakan untuk menangani animasi dan permintaan Ajax.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="image3.png">
-              <p>Ruby</p>
+              <p>Roy Haholongan</p>
             </div>
             <p class="txt-contents">Bahasa dinamis, serba guna yang sederhana dan produktif. Ruby sering digunakan untuk membuat aplikasi web yang responsive.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="image4.png">
-              <p>PHP</p>
+              <p>Suisbiyanto P</p>
+            </div>
+            <p class="txt-contents">Bahasa scripting "open-source" yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="image5.png">
+              <p>Surahman</p>
             </div>
             <p class="txt-contents">Bahasa scripting "open-source" yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.</p>
           </div>
@@ -77,7 +87,7 @@
           <h2>Apakah anda siap untuk menjadi programer yang handal?</h2>
           <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
         </div>
-        <span class="btn message">Mulai belajar</span>
+        <span class="btn message">CONTACT US</span>
       </div>
     </div>
     <footer>
