--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-           <h2>Personil Kelompok I-23 Kelas Programming HTML, CSS, dan javasript.</h2>
+           <h2>Our Team</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
