--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>TEAM I23.</h1>
+        <h1>WELCOME</h1>
         <h1>PROGRAM DIGITAL TALENT 2020.</h1>
         <p>Program Kelas Online Academy Digital talent 2020 kelas Programming HTML, CSS, dan javasript.</p>
         <p>Program ini dilaksanakan oleh Kominfo bekerja sama dengan Progate sebagai penyelenggara kursus Online.</p>
