--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <h1>WELCOME</h1>
         <h1>PROGRAM DIGITAL TALENT 2020.</h1>
-        <p>Program Kelas Online Academy Digital talent 2020 kelas Programming HTML, CSS, dan javasript.</p>
+        <p>Program Online Academy Digital talent 2020 kelas Programming HTML, CSS, dan javasript.</p>
         <p>Program ini dilaksanakan oleh Kominfo bekerja sama dengan Progate sebagai penyelenggara kursus Online.</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Daftar dengan Email</a>
@@ -44,38 +44,38 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="image1.png">
+              <img src="images/image1.png">
               <p>Rizki AI</p>
             </div>
-            <p class="txt-contents">Dua bahasa yang digunakan untuk membangun struktur dan design tambilan website anda.</p>
+            <p class="txt-contents">Project Manager</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="image2.png">
+              <img src="images/image2.png">
               <p>Subhan J</p>
             </div>
-            <p class="txt-contents">JavaScript Library yang cepat, kaya akan fitur dan mudah digunakan untuk menangani animasi dan permintaan Ajax.</p>
+            <p class="txt-contents">PHP Developer</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="image3.png">
+              <img src="images/image3.png">
               <p>Roy Haholongan</p>
             </div>
-            <p class="txt-contents">Bahasa dinamis, serba guna yang sederhana dan produktif. Ruby sering digunakan untuk membuat aplikasi web yang responsive.</p>
+            <p class="txt-contents">JavaScript Developer</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="image4.png">
+              <img src="images/image4.png">
               <p>Suisbiyanto P</p>
             </div>
-            <p class="txt-contents">Bahasa scripting "open-source" yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.</p>
+            <p class="txt-contents">Customer Service Officer</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="image5.png">
+              <img src="images/image5.png">
               <p>Surahman</p>
             </div>
-            <p class="txt-contents">Bahasa scripting "open-source" yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.</p>
+            <p class="txt-contents">Graphic Designer</p>
           </div>
           <div class="clear"></div>
         </div>
