--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://web.kominfo.go.id/sites/default/files/users/12/DTS.png">
+          <img class="logo" src="images/CSS-icon.png">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
