--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="images/icon.png">
+          <img class="logo" src="images/23.png">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
