--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     </div>
     <footer>
       <div class="container">
-        <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-        <p>Learn to code, learn to be creative.</p>
+        <img src="images/cs-info.png">
+        <p>@2020 | Help Center.</p>
       </div>
     </footer>
   </body>
