--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
     <footer>
       <div class="container">
         <img src="images/cs-info.png">
-        <p>@2020 | Help Center.</p>
+        <p>@2020 | Help and Support.</p>
+      </div>
+      <div class="footer-list">
+        <ul>
+          <li>Tentang</li>
+          <li>Blog</li>
+          <li>News</li>
+        </ul>
       </div>
     </footer>
   </body>
