--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="images/profil4.png">
+              <img src="images/webprofil4.png">
               <p>Suisbiyanto P</p>
             </div>
             <p class="txt-contents">Customer Service Officer</p>
