--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
       <div class="container">
         <img src="images/cs-info.png">
         <p>@2020 | Help and Support.</p>
-      </div>      
+      </div>
+      <a class="fb" href="#"></a>
     </footer>
   </body>
 </html>
