--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <img src="images/cs-info.png">
         <p>@2020 | Help and Support.</p>
       </div>
-      <a class="fb" href="#"></a>
+      <a class="fb" href="#">INFORMASI</a>
     </footer>
   </body>
 </html>
