--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <p>atau</p>
           <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
           <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
+          <a class="fb" href="#">Informasi</a>
         </div>
       </div>
     </div>
@@ -95,7 +96,6 @@
         <img src="images/cs-info.png">
         <p>@2020 | Help and Support.</p>
       </div>
-      <a class="fb" href="#">INFORMASI</a>
     </footer>
   </body>
 </html>
