--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
             </div>
             <p class="txt-contents">Graphic Designer</p>
           </div>
+          <div class="anime">
+          <img src="images/image4.png" alt="Avatar" class="image">
+            <div class="overlay">
+              <div class="text">Hello World</div>
+              </div>
+            </div>
           <div class="clear"></div>
         </div>
       </div>
