--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
           <p>atau</p>
           <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
           <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
-          <a class="fb" href="#">Informasi</a>
         </div>
       </div>
     </div>
@@ -48,35 +47,35 @@
               <img src="images/image1.png">
               <p>Rizki AI</p>
             </div>
-            <p class="txt-contents">Project Manager</p>
+            <p class="txt-contents">HTML & Java Script</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="images/image2.png">
               <p>Subhan J</p>
             </div>
-            <p class="txt-contents">PHP Developer</p>
+            <p class="txt-contents">HTML & Java Script</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="images/image3.png">
               <p>Roy Haholongan</p>
             </div>
-            <p class="txt-contents">JavaScript Developer</p>
+            <p class="txt-contents">HTML & Java Script</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="images/webprofil4.png">
               <p>Suisbiyanto P</p>
             </div>
-            <p class="txt-contents">Customer Service Officer</p>
+            <p class="txt-contents">HTML & Java Srcript</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="images/image5.png">
               <p>Surahman</p>
             </div>
-            <p class="txt-contents">Graphic Designer</p>
+            <p class="txt-contents">HTML & Java Script</p>
           </div>
           
           <div class="clear"></div>
