--- a/index.html
+++ b/index.html
@@ -14,20 +14,15 @@
         <div class="header-left">
           <img class="logo" src="images/23.png">
         </div>
-        <ul class="topnav">
+        
+        <div class="header-right">
           <li><a href="#home">Home</a></li>
           <li><a href="#project">Project</a></li>
           <li><a href="#about">About</a></li>
-          <a href="#login" class="login">Log in</a> 
+          <li><a href="#login" class="login">Log in</a></li>
           <li class="icon">
             <a href="javascript:void(0);" onclick="myFunction()"><span class="fa fa-bars menu-icon"></span></a>
           </li>
-        </ul>
-        <div class="header-right">
-          <a href="#home">Home</a>
-          <a href="#project">Project</a>
-          <a href="#about">About</a>
-          <a href="#login" class="login">Log in</a>          
         </div>
       </div>
     </header>
