--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <script>
 /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
 function myFunction() {
-    document.getElementsByClassName("topnav")[0].classList.toggle("responsive");
+    document.getElementsByClassName("header-right")[0].classList.toggle("responsive");
 }
 
  </script>
