--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header-right">
           <li><a href="#home">Home</a></li>
           <li><a href="#project">Project</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#team">About</a></li>
           <li><a href="#login" class="login">Log in</a></li>
           <li class="icon">
             <a href="javascript:void(0);" onclick="myFunction()"><span class="fa fa-bars menu-icon"></span></a>
