--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div class="heading">
            <h2>Our Team</h2>
         </div>
+        <div id="team">
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
@@ -83,6 +84,7 @@
           </div>          
           <div class="clear"></div>
         </div>
+      </div>
       </div>
     </div>
     <div class="message-wrapper">
