--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         
         <div class="header-right">
           <li><a href="#home">Home</a></li>
-          <li><a href="#project">Project</a></li>
           <li><a href="#team">About</a></li>
           <li><a href="#login" class="login">Log in</a></li>
           <li class="icon">
@@ -27,6 +26,7 @@
       </div>
     </header>
     <div class="top-wrapper">
+      <div id="home">
       <div class="container">
         <h1>WELCOME</h1>
         <h1>PROGRAM DIGITAL TALENT 2020.</h1>
@@ -38,6 +38,7 @@
           <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
           <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
         </div>
+      </div>
       </div>
     </div>
     <div class="lesson-wrapper">
