--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="images/image1.png">
+              <img src="images/user.png">
               <p>Rizki AI</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="images/image2.png">
+              <img src="images/user.png">
               <p>Subhan J</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="images/image3.png">
+              <img src="images/user.png">
               <p>Roy Haholongan</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
@@ -78,7 +78,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="images/image5.png">
+              <img src="images/user.png">
               <p>Surahman</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
