--- a/index.html
+++ b/index.html
@@ -41,43 +41,43 @@
       </div>
       </div>
     </div>
-    <div class="lesson-wrapper">
+    <div class="about-wrapper">
       <div class="container">
         <div class="heading">
            <h2>Our Team</h2>
         </div>
         <div id="team">
-        <div class="lessons">
-          <div class="lesson">
-            <div class="lesson-icon">
+        <div class="abouts">
+          <div class="about">
+            <div class="about-icon">
               <img src="images/user.png">
               <p>Rizki AI</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
           </div>
-          <div class="lesson">
-            <div class="lesson-icon">
+          <div class="about">
+            <div class="about-icon">
               <img src="images/user.png">
               <p>Subhan J</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
           </div>
-          <div class="lesson">
-            <div class="lesson-icon">
+          <div class="about">
+            <div class="about-icon">
               <img src="images/user.png">
               <p>Roy Haholongan</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
           </div>
-          <div class="lesson">
-            <div class="lesson-icon">
+          <div class="about">
+            <div class="about-icon">
               <img src="images/webprofil4.png">
               <p>Suisbiyanto P</p>
             </div>
             <p class="txt-contents">HTML & Java Srcript</p>
           </div>
-          <div class="lesson">
-            <div class="lesson-icon">
+          <div class="about">
+            <div class="about-icon">
               <img src="images/user.png">
               <p>Surahman</p>
             </div>
@@ -86,6 +86,15 @@
           <div class="clear"></div>
         </div>
       </div>
+      </div>
+    </div>
+    <div class="message-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Apakah anda siap untuk menjadi programer yang handal?</h2>
+          <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
+        </div>
+        <span class="btn message">CONTACT US</span>
       </div>
     </div>
     <div class="message-wrapper">
