--- a/index.html
+++ b/index.html
@@ -97,13 +97,12 @@
         <span class="btn message">CONTACT US</span>
       </div>
     </div>
-    <div class="message-wrapper">
+    <div class="informasi-wrapper">
       <div class="container">
         <div class="heading">
           <h2>Apakah anda siap untuk menjadi programer yang handal?</h2>
           <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
         </div>
-        <span class="btn message">CONTACT US</span>
       </div>
     </div>
     <footer>
