--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <div class="informasi-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Apakah anda siap untuk menjadi programer yang handal?</h2>
-          <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
+          <h2>-Claude T. Bissell- </h2>
+          <h3>Risk more than other think is safe. Care more than other think is wise. Dream more than other think is practical. Expect more than other think is possible</h3>
         </div>
       </div>
     </div>
