--- a/index.html
+++ b/index.html
@@ -50,35 +50,35 @@
         <div class="abouts">
           <div class="about">
             <div class="about-icon">
-              <img src="images/user.png">
+              <img src="images/image3.png">
               <p>Rizki AI</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
           </div>
           <div class="about">
             <div class="about-icon">
-              <img src="images/user.png">
+              <img src="images/image2.png">
               <p>Subhan J</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
           </div>
           <div class="about">
             <div class="about-icon">
-              <img src="images/user.png">
+              <img src="images/image1.png">
               <p>Roy Haholongan</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
           </div>
           <div class="about">
             <div class="about-icon">
-              <img src="images/webprofil4.png">
+              <img src="images/image4.png">
               <p>Suisbiyanto P</p>
             </div>
             <p class="txt-contents">HTML & Java Srcript</p>
           </div>
           <div class="about">
             <div class="about-icon">
-              <img src="images/user.png">
+              <img src="images/image1.png">
               <p>Surahman</p>
             </div>
             <p class="txt-contents">HTML & Java Script</p>
